  case often arises from generator expressions with variable where clauses.
- Added set_to_ranges built-ins to enable efficient iteration over sets. These are used
  to implement set_in for float variables, which was missing before.
- The Gurobi and CPLEX backends now support the --random-seed command line option.
- The MIPDomains optimisations have been switched back on by default. The optimisations
  have also been strengthened for some special cases.
- Linearisation of multiplication can now consider the exact domain of a factor.
- Linearisation of variable domains with holes now uses set_in instead of individual
  not-equal constraints, which may result in more compact FlatZinc.
- The product functions have been made non-recursive in order to support longer
  arrays.
- Bounds inference for results of if-then-else expressions has been improved.
- Support for optional float variables has been added.

Bug fixes:
- Fixed output handling on Windows (output is now processed on the main thread,
  so that exceptions thrown during output are printed correctly, and memory
  management is thread safe).
- Fixed decomposition of reified mdd constraint, and strengthened decompositions
  of mdd and cost_mdd.
- Fix handling of variable re-definitions (e.g. converting sets to arrays of bools),
  which would previously sometimes result in variables being removed although they
  were required for output, or the reverse mapping function not being available
  in the output model.
- Include regular.mzn from regular_regexp.mzn. (#351)
- Inlining of function calls has been moved from the flattener into the type checker, and
  it now is more strict about which functions can be inlined in order to avoid overloading
  issues.
- Updated fzn_count_{neq,leq,lt,geq,gt}, fzn_global_cardinality_low_up{,_reif} to use use
  the count_eq predicate. (#334, #335)
- Fixed the documentation for several constraints, which did not display as bullet point
  lists as intended.